@@ -20,7 +20,7 @@
             2021-05-24, Erik P G Johansson: Data has not been systematically searched for saturation, but should cover most cases (or at least the most egregious ones) up until 2021-03-06.
         </note>
         <note>
-            2024-02-01, Erik P G Johansson: Table should contain all thruster firings for the time period 2020-02-12 (launch+2 days) to 2024-05-19 (inclusive). Only contains manually identified thuster firings.
+            2024-02-01, Erik P G Johansson: Table should contain all thruster firings for the time period 2020-02-12 (launch+2 days) to 2024-08-04 (inclusive). Only contains manually identified thuster firings.
         </note>
         <note>
             2024-01-31, Erik P G Johansson: BICAS detects saturation itself since v8.0.0 and labels it as "full saturation". One should therefore not need to add more FULL_SATURATION entries to this list. FULL_SATURATION entries in this table are additionally treated by BICAS as "full saturation".
@@ -2300,6 +2300,84 @@
         <event>
             <startTimeUtc>2024-05-13T01:04:19</startTimeUtc>
             <stopTimeUtc> 2024-05-13T01:16:53</stopTimeUtc>
+            <rcsNsoId>THRUSTER_FIRING</rcsNsoId>
+            <description></description>
+        </event>
+        <event>
+            <startTimeUtc>2024-05-20T01:04:31</startTimeUtc>
+            <stopTimeUtc> 2024-05-20T01:14:57</stopTimeUtc>
+            <rcsNsoId>THRUSTER_FIRING</rcsNsoId>
+            <description></description>
+        </event>
+        <event>
+            <startTimeUtc>2024-05-27T01:04:23</startTimeUtc>
+            <stopTimeUtc> 2024-05-27T01:14:31</stopTimeUtc>
+            <rcsNsoId>THRUSTER_FIRING</rcsNsoId>
+            <description></description>
+        </event>
+        <event>
+            <startTimeUtc>2024-06-03T01:04:21</startTimeUtc>
+            <stopTimeUtc> 2024-06-03T01:14:17</stopTimeUtc>
+            <rcsNsoId>THRUSTER_FIRING</rcsNsoId>
+            <description></description>
+        </event>
+        <event>
+            <startTimeUtc>2024-06-10T01:04:21</startTimeUtc>
+            <stopTimeUtc> 2024-06-10T01:18:46</stopTimeUtc>
+            <rcsNsoId>THRUSTER_FIRING</rcsNsoId>
+            <description></description>
+        </event>
+        <event>
+            <startTimeUtc>2024-06-17T01:04:19</startTimeUtc>
+            <stopTimeUtc> 2024-06-17T01:23:24</stopTimeUtc>
+            <rcsNsoId>THRUSTER_FIRING</rcsNsoId>
+            <description></description>
+        </event>
+        <event>
+            <startTimeUtc>2024-06-24T01:04:18</startTimeUtc>
+            <stopTimeUtc> 2024-06-24T01:22:40</stopTimeUtc>
+            <rcsNsoId>THRUSTER_FIRING</rcsNsoId>
+            <description></description>
+        </event>
+        <event>
+            <startTimeUtc>2024-07-01T01:04:22</startTimeUtc>
+            <stopTimeUtc> 2024-07-01T01:22:24</stopTimeUtc>
+            <rcsNsoId>THRUSTER_FIRING</rcsNsoId>
+            <description></description>
+        </event>
+        <event>
+            <startTimeUtc>2024-07-08T01:04:26</startTimeUtc>
+            <stopTimeUtc> 2024-07-08T01:18:27</stopTimeUtc>
+            <rcsNsoId>THRUSTER_FIRING</rcsNsoId>
+            <description></description>
+        </event>
+        <event>
+            <startTimeUtc>2024-07-08T20:29:28</startTimeUtc>
+            <stopTimeUtc> 2024-07-08T20:42:02</stopTimeUtc>
+            <rcsNsoId>THRUSTER_FIRING</rcsNsoId>
+            <description>Second thruster firing on the same day (unusual!)</description>
+        </event>
+        <event>
+            <startTimeUtc>2024-07-15T01:04:28</startTimeUtc>
+            <stopTimeUtc> 2024-07-15T01:22:04</stopTimeUtc>
+            <rcsNsoId>THRUSTER_FIRING</rcsNsoId>
+            <description></description>
+        </event>
+        <event>
+            <startTimeUtc>2024-07-21T22:30:07</startTimeUtc>
+            <stopTimeUtc> 2024-07-21T22:44:30</stopTimeUtc>
+            <rcsNsoId>THRUSTER_FIRING</rcsNsoId>
+            <description></description>
+        </event>
+        <event>
+            <startTimeUtc>2024-07-22T20:14:23</startTimeUtc>
+            <stopTimeUtc> 2024-07-22T20:26:52</stopTimeUtc>
+            <rcsNsoId>THRUSTER_FIRING</rcsNsoId>
+            <description></description>
+        </event>
+        <event>
+            <startTimeUtc>2024-07-29T10:34:22</startTimeUtc>
+            <stopTimeUtc> 2024-07-29T10:46:04</stopTimeUtc>
             <rcsNsoId>THRUSTER_FIRING</rcsNsoId>
             <description></description>
         </event>
